tests/paczka1/fuzzy1/47495248.err
Error in line 2: du9nWNt A289 34,70
Error in line 1: du9nWNt A686 43,9
Error in line 6: du9nWNt S381 59,0
Error in line 13: pLhHogYSwWP A686 75,7
Error in line 31: pLhHogYSwWP S381 33,7
